# rust_trading_system

./: Cargo.toml  README.md
src/: client.rs  db.rs  main.rs  server.rs
src/models/: asset.rs  mod.rs  transaction.rs  user.rs  wallet.rs
src/repositories/: asset_repository.rs  mod.rs  transaction_repository.rs  user_repository.rs  wallet_repository.rs
src/services/: asset_service.rs  mod.rs  transaction_service.rs  user_service.rs  wallet_service.rs
src/utils/: error.rs
tests/: integration_tests.rs
