[package]
name = "trading_system"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.26", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"